Fix overflow-x issue for coding posts

--- a/_sass/_begin.scss
+++ b/_sass/_begin.scss
@@ -13,6 +13,10 @@ img, embed, object, video {
 	max-width: 100%;
 }
 
+main {
+	overflow-x: hidden;
+}
+
 //
 // Fluid Typography
 //
